--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         </header>
 
         <main class="content">
-            <section class="lead"></section>
+            <section class="lead">
+                <h1 class="lead__title">Путешествия по России</h1>
+                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+                <img src="./images/lead-polka.jpg" class="lead__image" alt="Нижняя полка в плацкарте">
+                <p class="lead__caption">ваша полка — верхняя</p>
+            </section>
 
             <section class="intro"></section>
 
