--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="page">
         <header class="header">
-           <img src="./images/header-logo.svg" class="header__logo" alt="Логотип Россия">
+            <img src="./images/header-logo.svg" class="header__logo" alt="Логотип Россия">
             <div class="header__lang">
                 <a href="#" target="_blank" class="header__lang-link">Ru</a>
                 <a href="#" target="_blank" class="header__lang-link">En</a>
@@ -20,14 +20,40 @@
         </header>
 
         <main class="content">
-            <section class="lead">
+            <section class="lead lead__position">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
                 <img src="./images/lead-polka.jpg" class="lead__image" alt="Нижняя полка в плацкарте">
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
 
-            <section class="intro"></section>
+            <section class="intro intro__position">
+                <h2 class="intro__title">Чего мы там не видели?</h2>
+                <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
+                    планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия
+                    — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А
+                    ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов.
+                    Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их
+                    в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые
+                    интересные места, достойные вашего отпуска.</p>
+                <ul class="intro__list">
+                    <li>
+                        <p class="intro__list-item">Часовых поясов <span class="intro__list-span-accent">11</span></p>
+                    </li>
+                    <li>
+                        <p class="intro__list-item">Объектов природного наследия ЮНЕСКО <span class="intro__list-span-accent">12</span></p>
+                    </li>
+                    <li>
+                        <p class="intro__list-item">Объектов культурного наследия ЮНЕСКО <span class="intro__list-span-accent">16</span></p>
+                    </li>
+                    <li>
+                        <p class="intro__list-item">Природных заповедников <span class="intro__list-span-accent">105</span></p>
+                    </li>
+                    <li>
+                        <p class="intro__list-item">Аэропортов <span class="intro__list-span-accent">241</span></p>
+                    </li>
+                </ul>
+            </section>
 
             <section class="photo-grid"></section>
 
