--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         </header>
 
         <main class="content">
-            <section class="lead lead__position">
+            <section class="lead content__section">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
                 <img src="./images/lead-polka.jpg" class="lead__image" alt="Нижняя полка в плацкарте">
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
 
-            <section class="intro intro__position">
+            <section class="intro content__section">
                 <h2 class="intro__title">Чего мы там не видели?</h2>
                 <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
                     планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия
@@ -55,7 +55,20 @@
                 </ul>
             </section>
 
-            <section class="photo-grid"></section>
+            <section class="photo-grid content__section">
+                <img src="./images/photo-grid-train.jpg" class="photo-grid__item" alt="Вид из окна поезда">
+                <img src="./images/photo-grid-atharva-tulsi.jpg" class="photo-grid__item" alt="Вид сверху на снежные вершины">
+                <img src="./images/photo-grid-tuman.jpg" class="photo-grid__item" alt="Туманное поле">
+                <img src="./images/photo-grid-sochi.jpg" class="photo-grid__item" alt="Лес в тумане Сочи">
+                <img src="./images/photo-grid-arisa.jpg" class="photo-grid__item" alt="Машина на льду">
+                <img src="./images/photo-grid-baikal.jpg" class="photo-grid__item" alt="Пляж на озере Байкал">
+                <img src="./images/photo-grid-elbrus.jpg" class="photo-grid__item" alt="Эльбрус">
+                <img src="./images/photo-grid-kondratiev.jpg" class="photo-grid__item" alt="Дорожный знак пешеходного перехода">
+                <img src="./images/photo-grid-kamchatka-1.jpg" class="photo-grid__item" alt="Ущелье Камчатка">
+                <img src="./images/photo-grid-kamchatka-2.jpg" class="photo-grid__item" alt="Камчатка вид на гору">
+                <img src="./images/photo-grid-baikal-2.jpg" class="photo-grid__item" alt="Байкал на фоне скал">
+                <img src="./images/photo-grid-ergaki.jpg" class="photo-grid__item" alt="Горные вершины в тумане">
+            </section>
 
             <section class="places"></section>
 
