--- a/index.html
+++ b/index.html
@@ -59,20 +59,46 @@
             </section>
 
             <section class="photo-grid content__section">
-                <img src="./images/photo-grid-train.jpg" class="photo-grid__item" alt="Вид из окна поезда">
-                <img src="./images/photo-grid-atharva-tulsi.jpg" class="photo-grid__item"
+                <ul class="photo-grid__items">
+                    <li>
+                        <img src="./images/photo-grid-train.jpg" class="photo-grid__item" alt="Вид из окна поезда">
+                    </li>
+                    <li>
+                        <img src="./images/photo-grid-atharva-tulsi.jpg" class="photo-grid__item"
                     alt="Вид сверху на снежные вершины">
-                <img src="./images/photo-grid-tuman.jpg" class="photo-grid__item" alt="Туманное поле">
-                <img src="./images/photo-grid-sochi.jpg" class="photo-grid__item" alt="Лес в тумане Сочи">
-                <img src="./images/photo-grid-arisa.jpg" class="photo-grid__item" alt="Машина на льду">
-                <img src="./images/photo-grid-baikal.jpg" class="photo-grid__item" alt="Пляж на озере Байкал">
-                <img src="./images/photo-grid-elbrus.jpg" class="photo-grid__item" alt="Эльбрус">
-                <img src="./images/photo-grid-kondratiev.jpg" class="photo-grid__item"
-                    alt="Дорожный знак пешеходного перехода">
-                <img src="./images/photo-grid-kamchatka-1.jpg" class="photo-grid__item" alt="Ущелье Камчатка">
-                <img src="./images/photo-grid-kamchatka-2.jpg" class="photo-grid__item" alt="Камчатка вид на гору">
-                <img src="./images/photo-grid-baikal-2.jpg" class="photo-grid__item" alt="Байкал на фоне скал">
-                <img src="./images/photo-grid-ergaki.jpg" class="photo-grid__item" alt="Горные вершины в тумане">
+                    </li>
+                    <li>
+                        <img src="./images/photo-grid-tuman.jpg" class="photo-grid__item" alt="Туманное поле">
+                    </li>
+                    <li>
+                        <img src="./images/photo-grid-sochi.jpg" class="photo-grid__item" alt="Лес в тумане Сочи">
+                    </li>
+                    <li>
+                        <img src="./images/photo-grid-arisa.jpg" class="photo-grid__item" alt="Машина на льду">
+                    </li>
+                    <li>
+                        <img src="./images/photo-grid-baikal.jpg" class="photo-grid__item" alt="Пляж на озере Байкал">
+                    </li>
+                    <li>
+                        <img src="./images/photo-grid-elbrus.jpg" class="photo-grid__item" alt="Эльбрус">
+                    </li>
+                    <li>
+                        <img src="./images/photo-grid-kondratiev.jpg" class="photo-grid__item"
+                        alt="Дорожный знак пешеходного перехода">
+                    </li>
+                    <li>
+                        <img src="./images/photo-grid-kamchatka-1.jpg" class="photo-grid__item" alt="Ущелье Камчатка">
+                    </li>
+                    <li>
+                        <img src="./images/photo-grid-kamchatka-2.jpg" class="photo-grid__item" alt="Камчатка вид на гору">
+                    </li>
+                    <li>
+                        <img src="./images/photo-grid-baikal-2.jpg" class="photo-grid__item" alt="Байкал на фоне скал">
+                    </li>
+                    <li>
+                        <img src="./images/photo-grid-ergaki.jpg" class="photo-grid__item" alt="Горные вершины в тумане">
+                    </li>
+                  </ul>
             </section>
 
             <section class="places content__section">
