--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </li>
                     <li>
                         <img src="./images/photo-grid-atharva-tulsi.jpg" class="photo-grid__item"
-                    alt="Вид сверху на снежные вершины">
+                            alt="Вид сверху на снежные вершины">
                     </li>
                     <li>
                         <img src="./images/photo-grid-tuman.jpg" class="photo-grid__item" alt="Туманное поле">
@@ -84,21 +84,23 @@
                     </li>
                     <li>
                         <img src="./images/photo-grid-kondratiev.jpg" class="photo-grid__item"
-                        alt="Дорожный знак пешеходного перехода">
+                            alt="Дорожный знак пешеходного перехода">
                     </li>
                     <li>
                         <img src="./images/photo-grid-kamchatka-1.jpg" class="photo-grid__item" alt="Ущелье Камчатка">
                     </li>
                     <li>
-                        <img src="./images/photo-grid-kamchatka-2.jpg" class="photo-grid__item" alt="Камчатка вид на гору">
+                        <img src="./images/photo-grid-kamchatka-2.jpg" class="photo-grid__item"
+                            alt="Камчатка вид на гору">
                     </li>
                     <li>
                         <img src="./images/photo-grid-baikal-2.jpg" class="photo-grid__item" alt="Байкал на фоне скал">
                     </li>
                     <li>
-                        <img src="./images/photo-grid-ergaki.jpg" class="photo-grid__item" alt="Горные вершины в тумане">
+                        <img src="./images/photo-grid-ergaki.jpg" class="photo-grid__item"
+                            alt="Горные вершины в тумане">
                     </li>
-                  </ul>
+                </ul>
             </section>
 
             <section class="places content__section">
@@ -106,7 +108,7 @@
                     <h3 class="place__title">Куршская коса</h3>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
+                        <a href="http://park-kosa.ru" target="_blank" class="place__link">park-kosa.ru</a>
                     </div>
                     <div class="place__block">
                         <img src="./images/place-kosa.jpg" class="place__image" alt="Водный горизонт">
@@ -200,8 +202,12 @@
                     <div class="place__block">
                         <img src="./images/place-karelia.jpg" class="place__image" alt="Водный горизонт">
                         <div class="place__paragraphs">
-                            <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
-                                В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
+                            <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
+                                сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30
+                                метров — леса карельских национальных парков из-за непроходимых болот никогда не знали
+                                топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу,
+                                видевшему солнце раньше, чем увидал его Иван Грозный.
+                                В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
                                 в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                         </div>
                     </div>
@@ -209,7 +215,12 @@
 
             </section>
 
-            <section class="cover"></section>
+            <section class="cover content__section">
+                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
+                    <h2 class="cover__title">До Байкала «на собаках»</h2>
+                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+                </a>
+            </section>
         </main>
 
         <footer class="footer"></footer>
