--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
                         <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
-                            class="place__link">National Geographic</a>
+                            class="place__link" target="_blank">National Geographic</a>
                     </div>
                     <div class="place__block">
                         <img src="./images/place-kolsky.jpg" class="place__image" alt="Водный горизонт">
@@ -155,7 +155,7 @@
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
                         <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
-                            class="place__link">Facebook</a>
+                            class="place__link" target="_blank">Facebook</a>
                     </div>
                     <div class="place__block">
                         <img src="./images/place-altai.jpg" class="place__image" alt="Водный горизонт">
@@ -176,7 +176,7 @@
                     <h3 class="place__title">Зимний Байкал</h3>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
+                        <a href="https://vk.com/baikalmile" class="place__link" target="_blank">https://vk.com/baikalmile</a>
                     </div>
                     <div class="place__block">
                         <img src="./images/place-winter-baikal.jpg" class="place__image" alt="Водный горизонт">
@@ -196,7 +196,7 @@
                     <h3 class="place__title">Карелия</h3>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="http://vodlozero.ru" class="place__link">http://vodlozero.ru/</a>
+                        <a href="http://vodlozero.ru" class="place__link" target="_blank">http://vodlozero.ru/</a>
                     </div>
                     <div class="place__block">
                         <img src="./images/place-karelia.jpg" class="place__image" alt="Водный горизонт">
@@ -223,7 +223,7 @@
             </section>
         </main>
 
-        <footer class="footer content__section">
+        <footer class="footer footer__section">
             <nav>
                 <ul class="footer__menu">
                     <li>
