--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </section>
         </main>
 
-        <footer class="footer footer__section">
+        <footer class="footer footer_position_center">
             <nav>
                 <ul class="footer__menu">
                     <li>
