--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div class="page">
-        <header class="header">
+        <header class="header page__header">
             <img src="./images/header-logo.svg" class="header__logo" alt="Логотип Россия">
             <div class="header__lang">
-                <a href="#" target="_blank" class="header__lang-link">Ru</a>
+                <a href="#" target="_blank" class="header__lang-link header__lang-link_active">Ru</a>
                 <a href="#" target="_blank" class="header__lang-link">En</a>
             </div>
         </header>
@@ -104,9 +104,9 @@
 
             <section class="places content__section">
                 <div class="place">
-                    <h3 class="place__title">Куршская коса</h3>
+                    <h2 class="place__title">Куршская коса</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
+                        <p class="place__url-heading">url</p>
                         <a href="http://park-kosa.ru" target="_blank" class="place__link">park-kosa.ru</a>
                     </div>
                     <div class="place__block">
@@ -128,9 +128,9 @@
                 </div>
 
                 <div class="place">
-                    <h3 class="place__title">Кольский</h3>
+                    <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
+                        <p class="place__url-heading">url</p>
                         <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                             class="place__link" target="_blank">National Geographic</a>
                     </div>
@@ -151,9 +151,9 @@
                 </div>
 
                 <div class="place">
-                    <h3 class="place__title">Алтай</h3>
+                    <h2 class="place__title">Алтай</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
+                        <p class="place__url-heading">url</p>
                         <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
                             class="place__link" target="_blank">Facebook</a>
                     </div>
@@ -173,9 +173,9 @@
                 </div>
 
                 <div class="place">
-                    <h3 class="place__title">Зимний Байкал</h3>
+                    <h2 class="place__title">Зимний Байкал</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
+                        <p class="place__url-heading">url</p>
                         <a href="https://vk.com/baikalmile" class="place__link" target="_blank">https://vk.com/baikalmile</a>
                     </div>
                     <div class="place__block">
@@ -193,9 +193,9 @@
                 </div>
 
                 <div class="place">
-                    <h3 class="place__title">Карелия</h3>
+                    <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
-                        <p class="place__url-heading">URL</p>
+                        <p class="place__url-heading">url</p>
                         <a href="http://vodlozero.ru" class="place__link" target="_blank">http://vodlozero.ru/</a>
                     </div>
                     <div class="place__block">
@@ -223,23 +223,23 @@
             </section>
         </main>
 
-        <footer class="footer footer_position_center">
+        <footer class="footer page__footer">
             <nav>
                 <ul class="footer__menu">
                     <li>
-                        <a class="footer__link" href="https://yandex.ru/maps" target="_self">Карты</a>
+                        <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
                     </li>
                     <li>
-                        <a class="footer__link" href="https://yandex.ru/pogoda" target="_self">Погода</a>
+                        <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
                     </li>
                     <li>
-                        <a class="footer__link" href="https://rasp.yandex.ru" target="_self">Расписание</a>
+                        <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
                     </li>
                     <li>
-                        <a class="footer__link" href="https://calendar.yandex.ru" target="_self">Календарь</a>
+                        <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
                     </li>
                     <li>
-                        <a class="footer__link" href="https://travel.yandex.ru" target="_self">Путешествия</a>
+                        <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
                     </li>
                 </ul>
             </nav>
